# Multy-Core

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CODING_STYLE.md  LICENSE  README.md  main.cpp
multy_core/: CMakeLists.txt  EOS.h  account.h  api.h  big_int.h  binary_data.h  bip44_coin_types.h  bitcoin.h  blockchain.h  common.h  eos.h  error.h  ethereum.h  golos.h  json_api.h  key.h  keys.h  mnemonic.h  properties.h  sha3.h  transaction.h  transaction_builder.h  version_from_git.cmake
multy_core/internal/: account.cpp  account.h  account_base.cpp  account_base.h  bitcoin_account.cpp  bitcoin_account.h  ethereum_account.cpp  ethereum_account.h  exception.cpp  exception.h  exception_stream.h  hd_path.cpp  hd_path.h  key.cpp  key.h  sha3.cpp  sha3.h  u_ptr.cpp  u_ptr.h  utility.cpp  utility.h
multy_core/src/: account.cpp  account_base.cpp  account_base.h  backtrace.cpp  backtrace.h  binary_data_utility.cpp  binary_data_utility.h  binary_stream.cpp  binary_stream.h  blockchain_facade_base.cpp  blockchain_facade_base.h  codec.cpp  codec.h  common.cpp  ec_key_utils.cpp  ec_key_utils.h  enum_name_map.cpp  enum_name_map.h  error.cpp  error_utility.cpp  error_utility.h  exception.cpp  exception.h  exception_stream.h  hash.cpp  hash.h  hd_path.cpp  hd_path.h  json_api.cpp  json_helpers.cpp  json_helpers.h  keys.cpp  mnemonic.cpp  object.cpp  object.h  property_predicates.h  sha3.cpp  transaction_base.cpp  transaction_base.h  u_ptr.cpp  (+4 more)
multy_core/src/EOS/: EOS_account.cpp  EOS_account.h  EOS_facade.cpp  EOS_facade.h  EOS_transaction.cpp  EOS_transaction.h  eos_binary_stream.cpp  eos_binary_stream.h  eos_name.cpp  eos_name.h  eos_transaction_action.cpp  eos_transaction_action.h  eos_transaction_builder_updateauth.cpp
multy_core/src/api/: account.cpp  account_impl.cpp  account_impl.h  big_int.cpp  big_int_impl.cpp  big_int_impl.h  binary_data.cpp  blockchain.cpp  common.cpp  error.cpp  ethereum.cpp  json_api.cpp  json_api_impl.cpp  json_api_impl.h  key.cpp  key_impl.cpp  key_impl.h  mnemonic.cpp  properties.cpp  properties_impl.cpp  properties_impl.h  sha3.cpp  sha3_impl.cpp  sha3_impl.h  transaction.cpp  transaction_builder.cpp  transaction_builder_impl.cpp  transaction_builder_impl.h  transaction_impl.cpp  transaction_impl.h
multy_core/src/bitcoin/: bitcoin_account.cpp  bitcoin_account.h  bitcoin_facade.cpp  bitcoin_facade.h  bitcoin_key.cpp  bitcoin_key.h  bitcoin_opcode.h  bitcoin_stream.cpp  bitcoin_stream.h  bitcoin_transaction.cpp  bitcoin_transaction.h  bitcoin_transaction_base.cpp  bitcoin_transaction_base.h  bitcoin_transaction_segwit.cpp  bitcoin_transaction_segwit.h  bitocin_transaction_segwit.cpp
multy_core/src/eos/: eos_account.cpp  eos_account.h  eos_binary_stream.cpp  eos_binary_stream.h  eos_facade.cpp  eos_name.cpp  eos_name.h  eos_transaction.cpp  eos_transaction.h  eos_transaction_action.cpp  eos_transaction_action.h  eos_transaction_builder_transfer.cpp  eos_transaction_builder_transfer.h  eos_transaction_builder_updateauth.cpp  eos_transaction_builder_updateauth.h  eos_transaction_transfer_action.cpp  eos_transaction_transfer_action.h
multy_core/src/ethereum/: ethereum_account.cpp  ethereum_account.h  ethereum_address.cpp  ethereum_address.h  ethereum_extra_data.h  ethereum_facade.cpp  ethereum_facade.h  ethereum_stream.cpp  ethereum_stream.h  ethereum_token.cpp  ethereum_token.h  ethereum_transaction.cpp  ethereum_transaction.h  ethereum_transaction_builder.cpp  ethereum_transaction_builder.h  ethereum_transaction_builder_erc20.cpp  ethereum_transaction_builder_erc20.h  ethereum_transaction_builder_erc721.cpp  ethereum_transaction_builder_erc721.h  ethereum_transaction_builder_multisig.cpp  ethereum_transaction_builder_multisig.h
multy_core/src/golos/: golos.cpp  golos_account.cpp  golos_account.h  golos_facade.cpp  golos_facade.h  golos_transaction.cpp  golos_transaction.h
multy_test/: CMakeLists.txt  bip39_test_cases.h  death_test.h  mocks.cpp  mocks.h  run_tests.cpp  run_tests.h  serialized_keys_test_base.cpp  serialized_keys_test_base.h  smoke_test.cpp  supported_blockchains.h  test_account.cpp  test_amount.cpp  test_big_int.cpp  test_bitcoin_account.cpp  test_bitcoin_transaction.cpp  test_codec.cpp  test_common.cpp  test_deletion.cpp  test_eos_account.cpp  test_eos_transaction.cpp  test_ethereum_account.cpp  test_ethereum_transaction.cpp  test_golos_account.cpp  test_golos_transaction.cpp  test_json_api_ethereum_transaction.cpp  test_json_api_transaction.cpp  test_json_api_transaction.h  test_keys.cpp  test_mnemonic.cpp  test_object.cpp  test_properties.cpp  test_sha3.cpp  test_transaction.cpp  test_transaction_builder.cpp  test_utility.cpp  utility.cpp  utility.h  value_printers.cpp  value_printers.h
multy_transaction/: CMakeLists.txt  amount.h  api.h  properties.h  transaction.h  transaction_change.h  transaction_fee.h
multy_transaction/internal/: amount.cpp  amount.h  bitcoin_transaction.cpp  bitcoin_transaction.h  ethereum_transaction.cpp  ethereum_transaction.h  properties.cpp  properties.h  transaction.cpp  transaction.h  transaction_base.cpp  transaction_base.h  u_ptr.h
multy_transaction/src/: amount.cpp  properties.cpp  transaction.cpp  transaction_change.cpp  transaction_fee.cpp
samples/: build.gradle
samples/android_run_tests/: Multy_core_tests
samples/android_run_tests/app/: build.gradle
samples/android_run_tests/app/src/main/: AndroidManifest.xml
samples/android_run_tests/app/src/main/cpp/: native-lib.cpp
samples/android_run_tests/app/src/main/res/layout/: activity_main.xml
samples/android_run_tests/gradle/wrapper/: gradle-wrapper.properties
samples/iOS_run_tests/: build_lib.sh
samples/iOS_run_tests/Headers/: api.h  common.h  error.h
samples/iOS_run_tests/iOS_run_tests/: AppDelegate.swift  ViewController.swift  iOS_run_tests-Bridging-Header.h
samples/iOS_run_tests/iOS_run_tests.xcodeproj/: project.pbxproj
samples/iOS_run_tests/iOS_run_tests.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
samples/iOS_run_tests/iOS_run_tests/Base.lproj/: Main.storyboard
tools/ios-autotools/: iconfigure
(+6 files in other folders)
